[package]
name = "deposit-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.3.1", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls"] }
regex = "^1.7.0"
diesel = { version = "2.0.0", features = ["postgres", "postgres_backend", "numeric"] }
dotenv = "0.15"
bigdecimal = "0.3.0"
